# ipc-terminal

./: .gitignore  CMakeLists.txt  README.md  main.cpp  项目需求.docx
code/: ipc-terminal.ini
code/app/: main.cpp
code/class/AbstractModule/: AbstractModule.h  AbstractObserverMode.h
code/class/TestClass/: TestClass.h
code/common/: global.h
code/common/log/: log.h
code/common/param/: common.c  param.c
code/include/: global.h  ipc_global.h
code/include/Control/: Control.h
code/include/Display/: Display.h  framebuffer.h
code/include/Network/: Network.h
code/include/Pantilt/: Pantilt.h  pwm.h
code/include/Signal/: Signal.h
code/include/Video/: Video.h  luckfox_osd.h  luckfox_rtsp.h  luckfox_video.h
code/include/control/: control.h
code/include/display/: display.h
code/include/framebuffer/: framebuffer.h
code/include/gpio/: gpio.h
code/include/led/: gpio.h  led.h
code/include/network/: network.h
code/include/param/: param.h
code/include/video_capture/: video_capture.h
code/modules/: Pantilt.cpp  Pantilt.h
code/modules/Control/: Control.cpp  Control.h
code/modules/Display/: Display.cpp  Display.h  framebuffer.c  framebuffer.h
code/modules/Led/: Led.cpp  Led.h
code/modules/Network/: Network.cpp  NetworkModule.cpp  NetworkModule.h  ntp.c
code/modules/Pantilt/: Pantilt.h  pantilt.c  pantilt.h  pwm.c  pwm.h
code/modules/Video/: Video.cpp  Video.h  luckfox_osd.c  luckfox_rgn_draw.cpp  luckfox_rgn_draw.h  luckfox_rtsp.c  luckfox_video.cpp  luckfox_video.h
code/modules/Video/osd/: font_factory.h  osd.c
code/onvif_server/: CMakeLists.txt  log.h  onvif_config.h  service_device.c  service_event.c  service_media.c  soapClient.c  soapServer.c  utils.c  utils.h  wsdd.nsmap
code/onvif_server/include/: onvif_server.h
code/onvif_server/interface/: helper_media.c  helper_media.h  helper_ptz.c  helper_ptz.h  onvif_server_interface.c  service_device.c  service_event.c  service_media.c  service_ptz.c
code/onvif_server/server/: onvif_config.h  onvif_server.c  onvif_server.h
code/onvif_server/soap/: soapClient.c  soapServer.c  soapStub.h  wsdd.nsmap
code/src/: CMakeLists.txt
code/src/Control/: Control.cpp
code/src/Display/: Display.cpp  framebuffer.c
code/src/Led/: Led.cpp  gpio.c
code/src/Network/: Network.cpp
code/src/Pantilt/: Pantilt.cpp  pwm.c
code/src/Video/: Video.cpp  luckfox_osd.c  luckfox_rgn_draw.cpp  luckfox_rtsp.c  luckfox_video.cpp  postprocess.cpp  yolov5.cpp
code/src/control/: control.c  control.cpp
code/src/display/: display.cpp  framebuffer.c
code/src/framebuffer/: framebuffer.c
code/src/gpio/: gpio.c
code/src/led/: gpio.c  led.c
code/src/network/: network.c  network.cpp
code/src/param/: param.c
code/src/video/: video.cpp
code/src/video_capture/: video_capture.cpp
include/: luckfox_mpi.h
include/rknn/: postprocess.h  yolov5.h
ipc-server-simple/mul_thread/: ipcserver  ipcserver.c  net.h  tcpserver
